--- a/apps/website/public/admin/index.html
+++ b/apps/website/public/admin/index.html
@@ -19,5 +19,6 @@
                           Simple button that will open the modal.
                             -->
     <div data-netlify-identity-button>Login with Netlify Identity</div>
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
 </html>
